--- a/registries/registry_app/static/style.css
+++ b/registries/registry_app/static/style.css
@@ -1,7 +1,1 @@
-li a {
-    color: green;
-}
-
-body {
-    background: white url("images/background.gif") no-repeat right bottom;
-}
+// Here comes some styles
