--- a/registries/registry_app/templates/index.html
+++ b/registries/registry_app/templates/index.html
@@ -3,13 +3,7 @@
 {% set title = "Main" %}
 
 {% block content %}
-{% if questions %}
-    <ul>
-    {% for question in questions %}
-    <li><a href="{{ url('poll', parts={'question_id': question.id}) }}">{{ question.question_text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+	{{ size }}
+
+	{{ resp }}
 {% endblock %}
