Better table search/filters, whitelabel version and api

--- a/registries/registry_app/static/css/settings.css
+++ b/registries/registry_app/static/css/settings.css
@@ -13,3 +13,17 @@
 .filler {
     height: 20px;
 }
+
+.contentbox.sub-footer .menu-3 .col {
+    background: white;
+}
+
+.contentbox.sub-footer .menu-3 .content a {
+    height: auto;
+    padding: 15px;
+    background: white;
+}
+
+.contentbox.sub-footer .menu-3 .content a img {
+    max-height: 95px;
+}
