--- a/registries/registry_app/templates/base.html
+++ b/registries/registry_app/templates/base.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="{{ url('static', filename='css/gridly.min.css') }}" />
 <link rel="stylesheet" href="{{ url('static', filename='css/nost-icons.css') }}" />
 <link rel="stylesheet" href="{{ url('static', filename='css/datatables.min.css') }}" />
+<link rel="stylesheet" href="{{ url('static', filename='css/chosen.min.css') }}" />
 <link rel="stylesheet" href="{{ url('static', filename='css/settings.css') }}" />
 
 <script src="{{ url('static', filename='js/modernizr-3.2.0.base.js') }}"></script>
@@ -256,6 +257,7 @@
         <script src="{{ url('static', filename='js/jquery-1.11.3.min.js') }}"></script>
         <script src="{{ url('static', filename='js/build.min.js') }}"></script>
         <script src="{{ url('static', filename='js/datatables.min.js') }}"></script>
+        <script src="{{ url('static', filename='js/chosen.jquery.min.js') }}"></script>
         <script src="{{ url('static', filename='js/init.js') }}"></script>
 </body>
 </html>
