--- a/registries/registry_app/static/css/settings.css
+++ b/registries/registry_app/static/css/settings.css
@@ -31,3 +31,15 @@
 .hero-slogan p {
 	color: white;
 }
+
+table.dataTable thead th, table.dataTable thead td {
+    padding: 10px;
+}
+
+.chosen-results {
+    text-align: left;
+}
+
+#reg-description {
+    padding-top: 20px;
+}
